--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,12 @@ requirements = []
 path = 'contracts/ballot-creation.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.voter-registration]
+path = 'contracts/voter-registration.clar'
+clarity_version = 2
+epoch = 2.5
+
 [repl.analysis]
 passes = ['check_checker']
 
