--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -10,11 +10,15 @@ path = 'contracts/ballot-creation.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.vote-casting]
+path = 'contracts/vote-casting.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.voter-registration]
 path = 'contracts/voter-registration.clar'
 clarity_version = 2
 epoch = 2.5
-
 [repl.analysis]
 passes = ['check_checker']
 
